<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yakemuz</string>
    <string name="action_settings">Settings</string>
    <string name="st_start_recording">Touch to start recording music</string>
    <string name="st_is_recording">Listening&#8230;</string>
    <string name="st_is_matching">Matching&#8230;</string>
    <string name="title_activity_song_results">SongResultsActivity</string>
    <string name="l_artist">Artist :&#160;</string>
    <string name="l_title">Title :&#160;</string>
    <string name="l_release_name">Album :&#160;</string>
    <string name="cd_b_record">record button</string>
    <string name="cd_album_cover">album cover</string>
    <string name="cd_whosampled_logo">logo whosampled</string>
    <string name="cd_deezer_logo">logo deezer</string>
    <string name="cd_spotify_logo">logo spotify</string>
    <string name="cd_laucher_logo">logo launcher</string>
    <string name="settings_title_recordtime">Recording time</string>
    <string name="settings_summary_recordtime">set at least 15s for better results</string>
    <string name="no_connection">no network connection</string>

</resources>